objects/WebCart.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Message_Text__c</fullName>
        <label>Custom Message Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Message_Type__c</fullName>
        <label>Custom Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OMSOrderEntry__Order_On_Behalf_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order On Behalf Of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Preorder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SCOM_OOA_Credit_Override_Status__c</fullName>
        <label>B2B Credit Override Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Response</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SCOM_OOA_Products_Override_Status__c</fullName>
        <label>B2B Products Override Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Response</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_WebCarts</fullName>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>GrandTotalAmount</columns>
        <columns>Status</columns>
        <columns>Owner</columns>
        <columns>Account</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Type</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <label>All Active Carts</label>
    </listViews>
    <listViews>
        <fullName>All_WebCarts</fullName>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>GrandTotalAmount</columns>
        <columns>Status</columns>
        <columns>Owner</columns>
        <columns>Account</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Type</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <label>All Active Carts</label>
    </listViews>
    <listViews>
        <fullName>Owned_WebCarts</fullName>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>GrandTotalAmount</columns>
        <columns>Status</columns>
        <columns>Account</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Type</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <label>My Active Carts</label>
    </listViews>
    <listViews>
        <fullName>Owned_WebCarts</fullName>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>GrandTotalAmount</columns>
        <columns>Status</columns>
        <columns>Account</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Type</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <label>My Active Carts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>